recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: not found: value step
	case _ => current(step); avance(length) 
                          ^